animation loading process

--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-spring/parallax": "^9.7.5",
+    "@react-spring/web": "^9.7.5",
     "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.30.0",
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.4",
     "gsap": "^3.12.7",
+    "lottie-react": "^2.4.1",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.475.0",
-    "motion": "^12.4.4",
+    "motion": "^12.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^7.1.5",
     "react-scroll-parallax": "^3.4.5",
     "scrolltrigger": "^1.0.1",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^22.13.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
