--- a/package.json
+++ b/package.json
@@ -46,5 +46,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "overrides": {
+    "rollup": {
+      "@rollup/rollup-linux-x64-gnu": "4.6.1"
+    }
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
